# Copyright: 2013 iCub Facility, Istituto Italiano di Tecnologia
# Author: Francesco Giovannini
# CopyPolicy: Released under the terms of the GNU GPL v2.0.
# 

#
# The project src CMakeLists.
#


# ###########################################################################
# Project content
# ###########################################################################
# Included directories
include_directories(lib/)

# Subdirectories
add_subdirectory(lib/)      # Libraries
add_subdirectory(modules/)  # Modules
# ###########################################################################
